   Read more in the OBS Admin Guide.
 * Receive email notifications for projects that are in your watchlist. Configure at /user/notifications.
 * Improved UI/UX for configuration of notifications page. Now it shows a better layout and explanations to make this complex page easy to understand.

API:
 * Kerberos authentication mode
 * api_relative_url_root option was removed

Backend:
 * support showing source files in blame view (works also via links)
 * support project copy with makeoriginolder option

Shipment:
 *

Bugfixes:
 * Deletion of groups with users was not working
 * Fixed generation of the breadcrumb for the Image Editor (Kiwi)
 * Using ActiveSupport::JSON as encoder everywhere prevent to fail on Notification creation with events that have a very big payload

Wanted changes:
===============

 * creating of repositories on branching has changed if repositories of the
   source refer each other. This gets recreated in new project.

 * project copy is not adding the user anymore

 * service dispatcher is used by default now

 * The editing of a user's realname, email adress or password is no longer possible if LDAP mode is activated

 * Unused ldap options in options.yml were dropped:
   - ldap_update_support
   - ldap_object_class
   - ldap_entry_base
   - ldap_sn_attr_required

 * dropping of the project/package tag functionality/api

 * password hashing algorithm was changed to bcrypt (blowfish)

 * The backend notification plugin system is not used anymore.
   The RabbitMQ plugin is replaced with a RabbitMQ message bus implementation in the frontend, you can find details about this in the admin manual.
   The Hermes plugin is dropped without replacement as it was only used for notifications which the OBS is doing on it's own since quite some time.

Other changes
=============

 *

Notes for systems using systemd:
================================

OBS is using init scripts, not systemd style .service files. This will stay until