@@ -1,0 +1,1 @@
+*/10 * * * * /usr/bin/bundle.ruby2.4 exec /srv/www/obs/api/script/delayed_job_monitor.rb > /dev/null
