@@ -50,6 +50,7 @@ UI:
 API:
  * Kerberos authentication mode
  * api_relative_url_root option was removed
+ * An error is raised if delayed_jobs is down
 
 Backend:
  * support showing source files in blame view (works also via links)
